2001-10-26  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (redirect_handler): Use
	soup_uri_set_auth().

	* src/libsoup/soup-uri.c (soup_uri_free): Don't use g_assert.
	(soup_uri_set_auth): Impl.

	* src/libsoup/soup-server.c (read_headers_cb): Use
	soup_message_set_context().

	* src/libsoup/soup-message.c (soup_message_set_context): Impl.
	(soup_message_get_context): Impl.
	(redirect_handler): Use soup_message_set_context().

2001-10-25  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (redirect_handler): Handle redirects
	when source uri has auth data by copying auth to new url.

2001-10-25  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Fixe bug
	where informational responses were treated as an unknown encoding,
	causing the actual response to be considered part of the
	informational response body.

2001-10-25  Dan Winship  <danw@ximian.com>

	* configure.in: Fix up the networking library checks to work on
	Solaris. Check for inet_pton. (Solaris doesn't have inet_aton.)

	* src/libsoup/soup-socket-unix.c (soup_address_new): Use inet_pton
	instead of inet_aton if available.

2001-10-22  Joe Shaw  <joe@ximian.com>

	* src/soup-ssl-proxy/soup-ssl-proxy.c (soup_ssl_proxy_readwrite):
	Make sure we handle G_IO_IN before we handle G_IO_HUP so we don't
	lose data on the pipe, as you can receive both at the same time.
	Ian Peters actually found this, but I am his commit monkey.

2001-10-22  JP Rosevear  <jpr@ximian.com>

	* src/libsoup/soup-dav.c (soup_dav_response_new): use new error
	api

	* src/libsoup/soup-queue.c (soup_parse_headers): ditto

	* src/libsoup/soup-message.c (soup_message_set_error_full): ditto
	(soup_message_set_error): ditto

2001-10-21  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.h: Reorganize.

	* src/libsoup/Makefile.am (libsoupinclude_HEADERS): Add soup-error.h.
	(libsoup_la_SOURCES): Add soup-error.c.
